# git-at-home

./: .gitignore  Dockerfile.build-controller  Dockerfile.builder  Dockerfile.deploy  Dockerfile.deployer  Dockerfile.hg  Dockerfile.jobs-list-ui  Dockerfile.jobs-ui  Dockerfile.nix-serve-service  Dockerfile.nix-webhook  TODO.org  flake.nix  pbh.sh  portals
.config/: hakari.toml
action/: action.yaml  deploy.yaml
charts/charts/nix-build/: Chart.yaml  Feature.yaml  values.yaml
charts/charts/nix-build/templates/: nix-build-crd.yaml  nix-build-deployment.yaml  nix-build-role.yaml  nix-build-rolebinding.yaml  nix-build-serviceaccount.yaml  nix-serve-deployment.yaml  nix-serve-pvc.yaml  nix-serve-service.yaml
crates/build-controller/: Cargo.toml  README.org
crates/build-controller/k8s/: test-build-II.yaml  test-build-III.yaml  test-build.yaml
crates/build-controller/nix/: deploy.nix  docker.nix  k8s.nix  ui.nix  webhook.nix
crates/build-controller/src/: k8s.rs  lib.rs  main.rs
crates/common/: Cargo.toml
crates/git-service/: Cargo.toml  README.org
crates/git-service/nix/: git.nix
crates/hg-service/: Cargo.toml
crates/my-workspace-hack/: Cargo.toml
crates/nix-serve-service/: Cargo.toml  Dockerfile
crates/nix-serve-service/.github/workflows/: deploy.yaml
crates/nix-serve-service/nix/: docker.nix  k8s.nix
crates/nix-serve-service/src/: main.rs
crates/repo-controller/: Cargo.toml  README.org
crates/repo-controller/src/: main.rs
crds/: gitaccess.yaml  gitrepository.yaml  gituser.yaml
k8s/builder/crds/: build.yaml  otherbuild.yaml
k8s/builder/resources/: build-example.yaml  job-example.yaml
k8s/repo/crds/: repo.yaml
k8s/repo/resources/: example.yaml
