[package]
name = "build-controller"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = "0.7.5"
common = { path = "../common" }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
tokio = { version = "1.0", features = ["full"] }
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
kube = { version = "0.98.0", default-features = false, features = ["client", "jsonpatch", "derive", "runtime"] }
schemars = "0.8.21"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
futures = "0.3.31"
thiserror = "2.0.11"
serde_yaml = "0.9.34"
