[package]
name = "build-controller"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "make-crd"
path = "src/bin/make-crd.rs"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "jobs-list-ui"
path = "src/bin/jobs_list_ui.rs"

[[bin]]
name = "job-ui"
path = "src/bin/job_ui.rs"


[dependencies]
axum = "0.7.5"
common = { path = "../common" }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
tokio = { version = "1.0", features = ["full"] }
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
kube = { version = "0.99.0", default-features = false, features = ["client", "jsonpatch", "derive", "runtime", "rustls-tls"] }
schemars = "0.8.21"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
futures = "0.3.31"
thiserror = "2.0.11"
serde_yaml = "0.9.34"
rustls = { version = "0.23.25", features = ["ring"] }
base64 = "0.22.1"
async-nats = "0.40.0"
anyhow = "1.0.97"
bytes = "1.10.1"
tokio-util = "0.7.14"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
