[package]
name = "common"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
tokio = { version = "1", features = ["sync"] }
# k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
# schemars = "0.8.21"
# serde = { version = "1.0.209", features = ["derive"] }
# serde_json = "1.0.127"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
