[package]
name = "hg-service"
version.workspace = true
edition.workspace = true

[dependencies]
tonic = { version = "0.9", features = ["tls"]}
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
git2 = "0.20.0"
rustls-pemfile = "2.2.0"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }

[build-dependencies]
tonic-build = "0.9"
