[package]
name = "nix-serve-service"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7.5"
bytes = "1.10.0"
common = { path = "../common" }
futures = "0.3.31"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
tokio = { version = "1.0", features = ["full"] }
tower-http = "0.6.2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.16.0", features = ["v4"] }
