[package]
name = "nix-serve-service"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7.5"
bytes = "1.10.0"
common = { path = "../common" }
futures = "0.3.31"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
rust-s3 = "0.35.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.14"
tower-http = "0.6.2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.16.0", features = ["v4"] }
