[package]
name = "repo-controller"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "crds"
path = "src/bin/crds.rs"

[lib]
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
k8s-openapi = { version = "0.23.0", features = ["v1_30"] }
kube = { version = "0.96.0",  features = ["client", "jsonpatch", "derive", "runtime"] }
schemars = "0.8.21"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures = "0.3"
futures-util = "0.3.31"
serde_yaml = "0.9.34"
